--- a/application.properties
+++ b/application.properties
@@ -61,3 +61,8 @@ recoveryFilePath=/u01/eirsapp/apache-tomcat-9.0.34/webapps/docs/eirs/uploaded-fi
 
 Top5Brands=vivo,Nokia,OPPO,Apple,Samsung
 
+#MOIFeatureName
+stolenFeatureName=Lost & stolen
+bulkCheckIMEIFeatureName=Bulk Check IMEI
+groupId=10002
+
